@@ -631,9 +631,15 @@
 	</CODE>
 </ACTION>
 
-<ACTION NAME="new-view">
+<ACTION NAME="new-view-copy">
 	<CODE>
 		jEdit.newView(view);
+	</CODE>
+</ACTION>
+
+<ACTION NAME="new-view">
+	<CODE>
+		jEdit.newView(view, buffer, new View.ViewConfig());
 	</CODE>
 </ACTION>
 
